# smart-media-system

./: .dockerignore  .env.example  .gitignore  CODEBUDDY.md  README.md  docker-compose.yml  start.bat  start.ps1
.codebuddy/commands/: speckit.plan.md
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codebuddy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run.bat  smart_media.db
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/admin/: routes.py
backend/app/api/hot/: routes.py
backend/app/api/idea/: routes.py
backend/app/api/plan/: routes.py
backend/app/api/recommend/: routes.py
backend/app/api/user/: auth.py  profile.py
backend/app/core/: config.py  deps.py  logging.py  rate_limit.py  scheduler.py  security.py
backend/app/db/: mongodb.py  redis.py  session.py
backend/app/models/: __init__.py  hot.py  hot_models.py  idea.py  plan.py  recommend.py  user.py
backend/app/schemas/: auth.py  common.py  hot.py  idea.py  plan.py  recommend.py  user.py
backend/app/services/crawler/: douyin_crawler.py  hot_service.py  scheduler.py
backend/app/services/user/: auth_service.py  user_service.py
backend/db/: init.sql
backend/scripts/: seed_data.py
backend/tests/: test_douyin_crawler.py
frontend/: .eslintrc.cjs  Dockerfile.prod  index.html  package-lock.json  package.json  run.bat  vite.config.js
frontend/src/: App.vue  (+1 more)
nginx/: default.conf
(+27 files in other folders)
